--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,10 @@
 .App {
   text-align: center;
+  flex: column;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
