--- a/frontend/src/components/LogViewer.css
+++ b/frontend/src/components/LogViewer.css
@@ -23,6 +23,7 @@
   table {
     width: 100%;
     border-collapse: collapse;
+    margin-top: 20px;
   }
   
   th, td {
@@ -31,8 +32,27 @@
   }
   
   th {
-    background-color: #f2f2f2;
+    background-color: #b4acac;
+    color : black;
     text-align: left;
+    text-align: center;
+    font-size: 20px;
+    padding:10px;
+    padding-top:20px;
+    padding-bottom:20px;
+    border-color:black;
+  }
+  
+  td {
+    background-color: #000000;
+    color:white;
+    border-color:rgb(44, 43, 43);
+    text-align: left;
+    text-align: center;
+    font-size: 18px;
+    padding:10px;
+    padding-top:20px;
+    padding-bottom:20px;
   }
 
   .log-viewer-container pre {
